--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.6.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/recharts": "^1.8.14",
+    "apollo-client": "^2.6.10",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.11.0",
     "isomorphic-fetch": "^2.2.1",
+    "pondjs": "1.0.0-alpha.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
@@ -17,9 +22,11 @@
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "redux-starter-kit": "^1.0.1",
+    "subscriptions-transport-ws": "^0.9.17",
     "typescript": "^3.7.2",
     "urql": "^1.6.3"
   },
